StrictServerInterface
