# internal/controller/secretclaim_controller.go
@@ -159,11 +159,14 @@ func (r *SecretClaimReconciler) createSecret(ctx context.Context, claim *secrets
 			return fmt.Errorf("generation spec is nil for AutoGenerated claim")
 		}
 
-		password, err := generatePassword(claim.Spec.Generation.Length, claim.Spec.Generation.Encoding)
-		if err != nil {
-			return fmt.Errorf("failed to generate password: %w", err)
+		for _, key := range claim.Spec.Generation.DataKeys {
+			password, err := generatePassword(claim.Spec.Generation.Length, claim.Spec.Generation.Encoding)
+			if err != nil {
+				return fmt.Errorf("failed to generate password: %w", err)
+			}
+			secretData[key] = []byte(password)
 		}
-		secretData["password"] = []byte(password) // добавить имя для пароля в секрет чтобы кроме password можно было задать свое имя
+
 	default:
 		return fmt.Errorf("unknown claim type: %s", claim.Spec.Type)
 	}
@@ -199,11 +202,13 @@ func (r *SecretClaimReconciler) updateSecret(ctx context.Context, claim *secrets
 			return fmt.Errorf("generation spec is nil for AutoGenerated claim")
 		}
 
-		password, err := generatePassword(claim.Spec.Generation.Length, claim.Spec.Generation.Encoding)
-		if err != nil {
-			return fmt.Errorf("failed to generate password: %w", err)
+		for _, key := range claim.Spec.Generation.DataKeys {
+			password, err := generatePassword(claim.Spec.Generation.Length, claim.Spec.Generation.Encoding)
+			if err != nil {
+				return fmt.Errorf("failed to generate password: %w", err)
+			}
+			secretData[key] = []byte(password)
 		}
-		secretData["password"] = []byte(password) // добавить имя для пароля в секрет чтобы кроме password можно было задать свое имя
 	default:
 		return fmt.Errorf("unknown claim type: %s", claim.Spec.Type)
 	}
